--- a/helm/fcp-fd-data/templates/cluster-ip-service.yaml
+++ b/helm/fcp-fd-data/templates/cluster-ip-service.yaml
@@ -1,3 +1,3 @@
-{{- include "ffc-helm-library.cluster-ip-service" (list . "ffc-template-node.cluster-ip-service") -}}
-{{- define "ffc-template-node.cluster-ip-service" -}}
+{{- include "ffc-helm-library.cluster-ip-service" (list . "fcp-fd-data.cluster-ip-service") -}}
+{{- define "fcp-fd-data.cluster-ip-service" -}}
 {{- end -}}
