--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ffc-template-node",
+  "name": "fcp-fd-data",
   "version": "0.1.1",
-  "description": "description-of-project-goes-here",
-  "homepage": "https://github.com/DEFRA/ffc-template-node",
+  "description": "Data integration layer for the Single Front Door",
+  "homepage": "https://github.com/DEFRA/fcp-fd-data",
   "main": "app/index.js",
   "type": "module",
   "scripts": {
