--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ffc-template-node",
-  "version": "0.1.0",
-  "description": "description-of-project-goes-here",
-  "homepage": "https://github.com/DEFRA/ffc-template-node",
+  "name": "fcp-fd-data",
+  "version": "0.1.1",
+  "description": "Data integration layer for the Single Front Door",
+  "homepage": "https://github.com/DEFRA/fcp-fd-data",
   "main": "app/index.js",
   "type": "module",
   "scripts": {
@@ -15,7 +15,10 @@
     "start:debug": "nodemon --inspect-brk=0.0.0.0 --ext js --legacy-watch app/index.js"
   },
   "author": "Defra",
-  "contributors": [],
+  "contributors": [
+    "Abidemi Adio <abidemi.adio@defra.gov.uk>",
+    "Simon Dunn <simon.dunn1@defra.gov.uk>"
+  ],
   "license": "OGL-UK-3.0",
   "dependencies": {
     "@hapi/hapi": "21.3.2",
