--- a/helm/fcp-fd-data/templates/azure-identity.yaml
+++ b/helm/fcp-fd-data/templates/azure-identity.yaml
@@ -1,3 +1,5 @@
+{{- if .Values.aadPodIdentity }}
 {{- include "ffc-helm-library.azure-identity" (list . "fcp-fd-data.azure-identity") -}}
+{{- end }}
 {{- define "fcp-fd-data.azure-identity" -}}
 {{- end -}}
