--- a/helm/fcp-fd-data/templates/azure-identity.yaml
+++ b/helm/fcp-fd-data/templates/azure-identity.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.aadPodIdentity }}
+{{- if .Values.usePodIdentity }}
 {{- include "ffc-helm-library.azure-identity" (list . "fcp-fd-data.azure-identity") -}}
 {{- end }}
 {{- define "fcp-fd-data.azure-identity" -}}
