--- a/helm/fcp-fd-data/values.yaml
+++ b/helm/fcp-fd-data/values.yaml
@@ -46,5 +46,5 @@ readinessProbe:
 usePodIdentity: true
 
 azureIdentity:
-  resourceID:
-  clientID:
+  resourceID: not-a-real-clientID
+  clientID: not-a-real-clientID
