--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -12,4 +12,15 @@ services:
       - "9004:9229"
     volumes:
       - ./app:/home/node/app
+      - ./test:/home/node/test
+      - ./scripts:/home/node/scripts
       - ./package.json:/home/node/package.json
+
+  fcp-fd-data-postgres:
+    ports:
+      - "5004:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
