--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fcp-fd-data",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Data integration layer for the Single Front Door",
   "homepage": "https://github.com/DEFRA/fcp-fd-data",
   "main": "app/index.js",
@@ -17,7 +17,8 @@
   "author": "Defra",
   "contributors": [
     "Abidemi Adio <abidemi.adio@defra.gov.uk>",
-    "Simon Dunn <simon.dunn1@defra.gov.uk>"
+    "Simon Dunn <simon.dunn1@defra.gov.uk>",
+    "Rana Salem <rana.salem@defra.gov.uk>"
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
