database config wip Co-authored-by: Amirs Ismuhametovs <JungaBunga@users.noreply.github.com> Co-authored-by: Rana Salem <rtasalem@users.noreply.github.com>

--- a/docker-compose.migrate.yaml
+++ b/docker-compose.migrate.yaml
@@ -37,7 +37,7 @@ services:
       - ./scripts:/scripts
 
   fcp-fd-data-postgres:
-    image: postgres:15
+    image: postgres:16.4-alpine
     environment: *common-postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data
