--- a/helm/fcp-fd-data/templates/container-secret.yaml
+++ b/helm/fcp-fd-data/templates/container-secret.yaml
@@ -1,6 +1,7 @@
 {{- include "ffc-helm-library.container-secret" (list . "fcp-fd-data.container-secret") -}}
 {{- define "fcp-fd-data.container-secret" -}}
 stringData:
+  POSTGRES_USER: {{ .Values.postgresService.postgresUser | quote }}
   {{- if .Values.appInsights.connectionString }}
   APPINSIGHTS_CONNECTIONSTRING: {{ quote .Values.appInsights.connectionString }}
   {{- end }}
