--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
+    "@azure/identity": "4.4.1",
     "@hapi/hapi": "21.3.2",
     "applicationinsights": "2.9.1",
     "hapi-pino": "12.1.0",
