--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
+    "@apollo/server": "4.11.0",
+    "@as-integrations/hapi": "2.0.1",
     "@azure/identity": "4.4.1",
     "@hapi/hapi": "21.3.2",
     "applicationinsights": "2.9.1",
     "hapi-pino": "12.1.0",
     "joi": "17.13.3",
-    "log-timestamp": "0.3.0"
+    "log-timestamp": "0.3.0",
+    "pg": "8.13.0",
+    "sequelize": "6.37.4"
   },
   "devDependencies": {
     "jest": "29.7.0",
