--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "applicationinsights": "2.9.1",
     "hapi-pino": "12.1.0",
     "joi": "17.13.3",
-    "log-timestamp": "0.3.0"
+    "log-timestamp": "0.3.0",
+    "sequelize": "6.37.4"
   },
   "devDependencies": {
     "jest": "29.7.0",
