--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,10 +10,16 @@ services:
     environment:
       APPINSIGHTS_CLOUDROLE: fcp-fd-data-local
       APPINSIGHTS_CONNECTIONSTRING: ${APPINSIGHTS_CONNECTIONSTRING}
+      POSTGRES_DB: fcp_fd_data
+      POSTGRES_HOST: ${POSTGRES_HOST:-fcp-fd-data-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_SCHEMA_PASSWORD:-ppp}
+      POSTGRES_PORT: 5432
+      POSTGRES_SCHEMA_NAME: ${POSTGRES_SCHEMA_NAME:-public}
+      POSTGRES_USERNAME: ${POSTGRES_SCHEMA_USERNAME:-postgres}
   
   fcp-fd-data-postgres:
     image: postgres:16.4-alpine
     environment:
-      POSTGRES_DB: fcp-fd-data
+      POSTGRES_DB: fcp_fd_data
       POSTGRES_PASSWORD: ppp
       POSTGRES_USERNAME: postgres
