--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,21 @@ services:
       target: production
     image: fcp-fd-data
     container_name: fcp-fd-data
+    depends_on: 
+      - fcp-fd-data-postgres
     environment:
       APPINSIGHTS_CLOUDROLE: fcp-fd-data-local
       APPINSIGHTS_CONNECTIONSTRING: ${APPINSIGHTS_CONNECTIONSTRING}
+      POSTGRES_DB: fcp_fd_data
+      POSTGRES_HOST: ${POSTGRES_HOST:-fcp-fd-data-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_SCHEMA_PASSWORD:-ppp}
+      POSTGRES_PORT: 5432
+      POSTGRES_SCHEMA_NAME: ${POSTGRES_SCHEMA_NAME:-public}
+      POSTGRES_USERNAME: ${POSTGRES_SCHEMA_USERNAME:-postgres}
+  
+  fcp-fd-data-postgres:
+    image: postgres:16.4-alpine
+    environment:
+      POSTGRES_DB: fcp_fd_data
+      POSTGRES_PASSWORD: ppp
+      POSTGRES_USERNAME: postgres
