--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fcp-fd-data",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Data integration layer for the Single Front Door",
   "homepage": "https://github.com/DEFRA/fcp-fd-data",
   "main": "app/index.js",
@@ -10,22 +10,26 @@
     "test": "jest --runInBand --forceExit",
     "test:watch": "jest --coverage=false --onlyChanged --watch --runInBand",
     "test:lint": "standard",
-    "test:debug": "node --inspect-brk=0.0.0.0 ./node_modules/jest/bin/jest.js --coverage=false --onlyChanged --watch --runInBand --no-cache",
+    "test:debug": "node --inspect-brk=0.0.0.0 ./node_modules/jest/bin/jest.js --coverage=false --runInBand --no-cache",
     "start:watch": "nodemon --inspect=0.0.0.0 --ext js --legacy-watch app/index.js",
     "start:debug": "nodemon --inspect-brk=0.0.0.0 --ext js --legacy-watch app/index.js"
   },
   "author": "Defra",
   "contributors": [
     "Abidemi Adio <abidemi.adio@defra.gov.uk>",
-    "Simon Dunn <simon.dunn1@defra.gov.uk>"
+    "Simon Dunn <simon.dunn1@defra.gov.uk>",
+    "Rana Salem <rana.salem@defra.gov.uk>"
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
+    "@azure/identity": "4.4.1",
     "@hapi/hapi": "21.3.2",
     "applicationinsights": "2.9.1",
     "hapi-pino": "12.1.0",
     "joi": "17.13.3",
-    "log-timestamp": "0.3.0"
+    "log-timestamp": "0.3.0",
+    "pg": "8.13.0",
+    "sequelize": "6.37.4"
   },
   "devDependencies": {
     "jest": "29.7.0",
