subscribe to fcp-fd-data topic

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,11 @@ services:
       POSTGRES_PORT: 5432
       POSTGRES_SCHEMA_NAME: ${POSTGRES_SCHEMA_NAME:-public}
       POSTGRES_USERNAME: ${POSTGRES_SCHEMA_USERNAME:-postgres}
+      MESSAGE_QUEUE_HOST: ${MESSAGE_QUEUE_HOST}
+      MESSAGE_QUEUE_PASSWORD: ${MESSAGE_QUEUE_PASSWORD}
+      MESSAGE_QUEUE_USER: ${MESSAGE_QUEUE_USER}
+      COMMS_TOPIC_ADDRESS: ${COMMS_TOPIC_ADDRESS:-fcp-fd-data}${MESSAGE_QUEUE_SUFFIX}
+      COMMS_SUBSCRIPTION_ADDRESS: ${COMMS_SUBSCRIPTION_ADDRESS:-fcp-fd-data}${MESSAGE_QUEUE_SUFFIX}
   
   fcp-fd-data-postgres:
     image: postgres:16.4-alpine
