--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
-    "jest": "29.7.0",
+    "jest": "^29.7.0",
     "jest-junit": "16.0.0",
     "nodemon": "3.0.1",
     "standard": "17.1.0"
