--- a/helm/fcp-fd-data/templates/config-map.yaml
+++ b/helm/fcp-fd-data/templates/config-map.yaml
@@ -5,7 +5,7 @@ data:
   PORT: {{ quote .Values.container.port }}
   APPINSIGHTS_CLOUDROLE: {{ quote .Values.name }}
   POSTGRES_DB: {{ quote .Values.postgresService.postgresDb }}
-  POSTGRES_HOST: {{ quote .Values.postgresService.postgresHost }}
+  POSTGRES_HOST: {{ quote .Values.postgresService.postgresqlHost }}
   POSTGRES_PORT: {{ quote .Values.postgresService.postgresPort }}
   POSTGRES_SCHEMA_NAME: {{ quote .Values.postgresService.postgresSchema }}
   MESSAGE_QUEUE_HOST: {{ .Values.container.messageQueueHost | quote }}
