--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@azure/identity": "4.4.1",
     "@hapi/hapi": "21.3.2",
     "applicationinsights": "2.9.1",
+    "convict": "^6.2.4",
     "ffc-messaging": "2.10.1",
     "hapi-pino": "12.1.0",
     "joi": "17.13.3",
