--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
+    "@apollo/server": "4.11.2",
+    "@as-integrations/hapi": "2.0.1",
     "@azure/identity": "4.4.1",
     "@hapi/hapi": "21.3.2",
     "applicationinsights": "2.9.1",
