--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "applicationinsights": "2.9.1",
     "convict": "^6.2.4",
     "ffc-messaging": "2.10.1",
+    "graphql-type-json": "^0.3.2",
     "hapi-pino": "12.1.0",
     "joi": "17.13.3",
     "log-timestamp": "0.3.0",
