--- a/helm/fcp-fd-data/templates/config-map.yaml
+++ b/helm/fcp-fd-data/templates/config-map.yaml
@@ -5,7 +5,14 @@ data:
   PORT: {{ quote .Values.container.port }}
   APPINSIGHTS_CLOUDROLE: {{ quote .Values.name }}
   POSTGRES_DB: {{ quote .Values.postgresService.postgresDb }}
-  POSTGRES_HOST: {{ quote .Values.postgresService.postgresHost }}
+  POSTGRES_HOST: {{ quote .Values.postgresService.postgresqlHost }}
   POSTGRES_PORT: {{ quote .Values.postgresService.postgresPort }}
   POSTGRES_SCHEMA_NAME: {{ quote .Values.postgresService.postgresSchema }}
+  MESSAGE_QUEUE_HOST: {{ .Values.container.messageQueueHost | quote }}
+  {{- if and (.Values.environmentCode) (not .Values.pr) }}
+  COMMS_TOPIC_ADDRESS: {{ .Values.container.commsTopicAddress }}-{{ .Values.environmentCode }}
+  {{ else }}
+  COMMS_TOPIC_ADDRESS: {{ .Values.container.commsTopicAddress | quote }}
+  {{- end }}
+  COMMS_SUBSCRIPTION_ADDRESS: {{ .Values.container.commsSubscriptionAddress }}
 {{- end -}}
