added gql config to switch on introspection in dev and test

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,7 @@ services:
       MESSAGE_QUEUE_USER: ${MESSAGE_QUEUE_USER}
       COMMS_TOPIC_ADDRESS: ${COMMS_TOPIC_ADDRESS:-fcp-fd-data}${MESSAGE_QUEUE_SUFFIX}
       COMMS_SUBSCRIPTION_ADDRESS: ${COMMS_SUBSCRIPTION_ADDRESS:-fcp-fd-data}${MESSAGE_QUEUE_SUFFIX}
+      ENVIRONMENT_CODE: ${ENVIRONMENT_CODE:-dev}
   
   fcp-fd-data-postgres:
     image: postgres:16.4-alpine
