--- a/helm/fcp-fd-data/values.yaml
+++ b/helm/fcp-fd-data/values.yaml
@@ -58,3 +58,8 @@ usePodIdentity: true
 azureIdentity:
   resourceID: not-a-real-clientID
   clientID: not-a-real-clientID
+
+ingress:
+  class: nginx
+  endpoint: fcp-fd-data
+  server:
