change topic reference from COMMS to DATA for clarity

--- a/helm/fcp-fd-data/templates/config-map.yaml
+++ b/helm/fcp-fd-data/templates/config-map.yaml
@@ -10,10 +10,10 @@ data:
   POSTGRES_SCHEMA_NAME: {{ quote .Values.postgresService.postgresSchema }}
   MESSAGE_QUEUE_HOST: {{ .Values.container.messageQueueHost | quote }}
   {{- if and (.Values.environmentCode) (not .Values.pr) }}
-  COMMS_TOPIC_ADDRESS: {{ .Values.container.commsTopicAddress }}-{{ .Values.environmentCode }}
+  DATA_TOPIC_ADDRESS: {{ .Values.container.dataTopicAddress }}-{{ .Values.environmentCode }}
   {{ else }}
-  COMMS_TOPIC_ADDRESS: {{ .Values.container.commsTopicAddress | quote }}
+  DATA_TOPIC_ADDRESS: {{ .Values.container.dataTopicAddress | quote }}
   {{- end }}
-  COMMS_SUBSCRIPTION_ADDRESS: {{ .Values.container.commsSubscriptionAddress }}
+  DATA_SUBSCRIPTION_ADDRESS: {{ .Values.container.dataSubscriptionAddress }}
   ENVIRONMENT_CODE: {{ quote .Values.environmentCode }}
 {{- end -}}
