--- a/provision.azure.yaml
+++ b/provision.azure.yaml
@@ -1,3 +1,7 @@
 resources:
+  identity: fd-data
   topics:
-    - name: data
+    - name: fcp-fd-data
+      role: receiver
+  postgreSql:
+    name: fcp-fd-data
