--- a/helm/fcp-fd-data/templates/config-map.yaml
+++ b/helm/fcp-fd-data/templates/config-map.yaml
@@ -14,6 +14,10 @@ data:
   {{ else }}
   DATA_TOPIC_ADDRESS: {{ .Values.container.dataTopicAddress | quote }}
   {{- end }}
+  {{- if .Values.pr }}
+  DATA_SUBSCRIPTION_ADDRESS: {{ .Values.container.dataTopicAddress }}
+  {{ else }}
   DATA_SUBSCRIPTION_ADDRESS: {{ .Values.container.dataSubscriptionAddress }}
+  {{- end }}
   ENVIRONMENT_CODE: {{ quote .Values.environmentCode }}
 {{- end -}}
