--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@hapi/hapi": "21.3.2",
     "applicationinsights": "2.9.1",
     "convict": "6.2.4",
+    "dataloader": "^2.2.3",
     "ffc-messaging": "2.10.1",
     "graphql-type-json": "0.3.2",
     "hapi-pino": "12.1.0",
