--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@apollo/server": "4.11.2",
     "@as-integrations/hapi": "2.0.1",
     "@azure/identity": "4.4.1",
+    "@graphql-tools/merge": "^9.0.17",
+    "@graphql-tools/schema": "^10.0.16",
     "@hapi/hapi": "21.3.2",
     "applicationinsights": "2.9.1",
     "convict": "6.2.4",
