--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "Abidemi Adio <abidemi.adio@defra.gov.uk>",
     "Simon Dunn <simon.dunn1@defra.gov.uk>",
     "Rana Salem <rana.salem@defra.gov.uk>",
-    "Amirs Ismuhametovs <amirs.ishmuhametovs@defra.gov.uk>"
+    "Amirs Ismuhametovs <amirs.ishmuhametovs@defra.gov.uk>",
+    "Fay Toward <fay.toward@defra.gov.uk>"
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
